kubernetes/kustomize/oauth-proxy/base/ingress-oauth.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-algorithm: RSA
    cert-manager.io/private-key-size: "4096"
    cert-manager.io/private-key-rotation-policy: Always
  labels:
    app.kubernetes.io/name: oauth-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: oauth-proxy
            port:
              number: 4180
        path: /oauth2
        pathType: Prefix
  tls:
  - hosts:
    - example.com
    secretName: oauth-proxy-tls
